--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
     "name": "Myoraei",
-    "slug": "Myoraei",
+    "slug": "myoraei",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "Myoraei",
+    "scheme": "myoraei",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "android": {
@@ -17,8 +17,19 @@
       "permissions": [
         "READ_EXTERNAL_STORAGE",
         "READ_MEDIA_AUDIO",
-        "POST_NOTIFICATIONS"
-      ]
+        "POST_NOTIFICATIONS",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.READ_MEDIA_VISUAL_USER_SELECTED",
+        "android.permission.ACCESS_MEDIA_LOCATION",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.READ_MEDIA_VIDEO",
+        "android.permission.READ_MEDIA_AUDIO"
+      ],
+      "package": "com.tanos.Myoraei"
+    },
+    "androidStatusBar": {
+      "backgroundColor": "#222A34"
     },
     "web": {
       "bundler": "metro",
@@ -52,10 +63,19 @@
           "resizeMode": "contain",
           "backgroundColor": "#000"
         }
-      ]
+      ],
+      "expo-asset",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "f5749736-798f-4522-b4ad-83a1a4d1be13"
+      }
+    },
+    "owner": "myoraei"
   }
 }
