--- a/package.json
+++ b/package.json
@@ -1,67 +1,76 @@
 {
-  "name": "Myoraei",
+  "name": "myoraei",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
+  },
+  "engines": {
+    "node": ">=20.19.4"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/slider": "^5.1.1",
+    "@react-native-community/slider": "5.0.1",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@shopify/flash-list": "^2.2.0",
+    "@shopify/flash-list": "2.0.2",
     "buffer": "^6.0.3",
+    "colorthief": "^2.6.0",
     "expo": "^54.0.30",
+    "expo-asset": "~12.0.12",
     "expo-audio": "^1.1.1",
     "expo-av": "^16.0.8",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
+    "expo-blur": "~15.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-dev-client": "^6.0.20",
     "expo-document-picker": "^14.0.8",
     "expo-file-system": "^19.0.21",
     "expo-font": "^14.0.10",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-linking": "~7.1.7",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linking": "~8.0.11",
     "expo-media-library": "^18.2.1",
     "expo-notifications": "^0.32.15",
-    "expo-router": "~5.1.4",
-    "expo-splash-screen": "~0.30.10",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "^16.0.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "music-metadata-browser": "^2.5.11",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-pager-view": "^8.0.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-image-colors": "^2.5.1",
+    "react-native-pager-view": "6.9.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/colorthief": "^2.6.0",
+    "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true,
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
