--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
     "buffer": "^6.0.3",
-    "colorthief": "^2.6.0",
     "expo": "^54.0.30",
     "expo-asset": "~12.0.12",
-    "expo-audio": "^1.1.1",
     "expo-av": "^16.0.8",
     "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "^6.0.20",
     "expo-document-picker": "^14.0.8",
@@ -39,7 +38,6 @@
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
     "expo-media-library": "^18.2.1",
-    "expo-notifications": "^0.32.15",
     "expo-router": "~6.0.21",
     "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "^16.0.10",
@@ -51,6 +49,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-audio-pro": "^10.1.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-colors": "^2.5.1",
