--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
         "android.permission.ACCESS_MEDIA_LOCATION",
         "android.permission.READ_MEDIA_IMAGES",
         "android.permission.READ_MEDIA_VIDEO",
-        "android.permission.READ_MEDIA_AUDIO"
+        "android.permission.READ_MEDIA_AUDIO",
+        "android.permission.MANAGE_EXTERNAL_STORAGE"
       ],
       "package": "com.tanos.Inami"
     },
@@ -38,9 +39,7 @@
     },
     "ios": {
       "infoPlist": {
-        "UIBackgroundModes": [
-          "audio"
-        ]
+        "UIBackgroundModes": ["audio"]
       }
     },
     "plugins": [
@@ -84,5 +83,6 @@
         "projectId": "09cb28b9-86b7-47af-b295-d236ff5dc870"
       }
     },
+    "owner": "myoraei"
   }
 }
